2006-12-17  Quentin Mathe <qmathe@club-internet.fr>

    * HACKING: Updated repository build section with more details.

2006-12-17  Quentin Mathe <qmathe@club-internet.fr>

    * HACKING: Added.

2006-12-11  Quentin Mathe <qmathe@club-internet.fr>

    * Bundles/GNUmakefile: Updated to include EtoileBehavior in the build 
    process.
    * setup.sh: Modified to set EtoileBehavior as an AppKit bundle with defaults.

2006-12-06  Quentin Mathe <qmathe@club-internet.fr>

    * setup.sh:
    * setdown.sh:
    Updated both scripts to link libXWindowServerKit.so and 
    libWorkspaceCommKit.so in /usr/lib. This is rather ugly but necessary
    for my next System update. This commit also includes the draft code based
    on ldconfig (as suggested by Richard Frith-Macdonald). This commented out 
    code should ultimately replace my ugly hack.

2006-12-03  Quentin Mathe <qmathe@club-internet.fr>

    * setup.sh:
    * setdown.sh:
    Updated both scripts to support System/SystemTaskList.plist deployment. 
    This is important, otherwise etoile_system won't launch any processes.
    
2006-11-30  Quentin Mathe <qmathe@club-internet.fr>

    * etoile.make: Added automatic export of common variable values, so they 
    are not repeated over and over in each module.

2006-11-30  Quentin Mathe <qmathe@club-internet.fr>

    * etoile.make: Fixed /bin/sh complaining about a missing argument on line 
    7. This has been corrected by quoting $LIBRARY_NAME and $FRAMEWORK_NAME in
    the elif test which follows. This means an undefined variable results in an
    empty string and not anymore in 'no value at all' (the root of the issue).
    Commented out debug logging.

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

    * etoile.make: Modified to include better support for library/framework 
    build. Now creates automatically a temporary header directory matching the 
    project name.
    
2006-11-19  Quentin Mathe <qmathe@club-internet.fr>
