@@ -1,3 +1,9 @@
+2006-12-18  Quentin Mathe <qmathe@club-internet.fr>
+
+    * setup.sh:
+    * setdown.sh:
+    Updated to set NSUseRunningCopy to YES by default.
+
 2006-12-17  Quentin Mathe <qmathe@club-internet.fr>
 
     * HACKING: Updated repository build section with more details.
